[gd_scene load_steps=6 format=1]

[ext_resource path="res://root.gd" type="Script" id=1]
[ext_resource path="res://11795.otf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]

font/size = 24
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]

font/size = 14
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]

font/size = 36
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 2 )

[node name="root" type="Node2D"]

script/script = ExtResource( 1 )

[node name="panel" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1241.0
margin/bottom = 674.0

[node name="header" type="Label" parent="panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 31.0
margin/top = 22.0
margin/right = 227.0
margin/bottom = 52.0
custom_fonts/font = SubResource( 1 )
text = "VSHADER SOURCE"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="header1" type="Label" parent="panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 466.0
margin/top = 22.0
margin/right = 662.0
margin/bottom = 52.0
custom_fonts/font = SubResource( 1 )
text = "FSHADER SOURCE"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="header2" type="Label" parent="panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 918.0
margin/top = 82.0
margin/right = 1156.0
margin/bottom = 145.0
custom_fonts/font = SubResource( 1 )
text = "VSHADER converted"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="header3" type="Label" parent="panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 925.0
margin/top = 326.0
margin/right = 1163.0
margin/bottom = 389.0
custom_fonts/font = SubResource( 1 )
text = "FSHADER converted"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="vshader_source_textedit" type="TextEdit" parent="panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 22.0
margin/top = 66.0
margin/right = 447.0
margin/bottom = 639.0
custom_fonts/font = SubResource( 2 )
syntax_highlighting = false
show_line_numbers = true
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="fshader_source_textedit" type="TextEdit" parent="panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 468.0
margin/top = 66.0
margin/right = 893.0
margin/bottom = 639.0
custom_fonts/font = SubResource( 2 )
syntax_highlighting = false
show_line_numbers = true
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="Button" type="Button" parent="panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 918.0
margin/top = 576.0
margin/right = 1174.0
margin/bottom = 638.0
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "CONVERT"
flat = false

[node name="vshader_converted" type="TextEdit" parent="panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 915.0
margin/top = 123.0
margin/right = 1177.0
margin/bottom = 304.0
custom_fonts/font = SubResource( 2 )
syntax_highlighting = false
show_line_numbers = true
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="fshader_converted" type="TextEdit" parent="panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 917.0
margin/top = 368.0
margin/right = 1176.0
margin/bottom = 556.0
custom_fonts/font = SubResource( 2 )
syntax_highlighting = false
show_line_numbers = true
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[connection signal="pressed" from="panel/Button" to="." method="_on_Button_pressed"]


